--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DBA-Backup-MySQL
-version:      0.8
-version_from: lib/DBA/Backup.pm
+name:         DBA-Backup-mysql
+version:      0.1
+version_from: lib/DBA/Backup/mysql.pm
 installdirs:  site
 requires:
 
